[tool.poetry]
name = "python-project-49"
version = "0.1.0"
description = ""
authors = ["Averin-Nikolay <Averin-Nikolay@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "brain_games"}]

[tool.poetry.dependencies]
python = "^3.10"
brain-games = "^0.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
